[package]
name = "ga_vrp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
itertools = "0.10.1"
serde = "1.0.152"
serde_json = "1.0.92"
serde_derive = "1.0.152"
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.4.5"
